RPS-188 My Cart credit card and site security icons are unaligned - The code to render the credit card and site security icons on the car page are totally different code than on the checkout. I made them uniform, same code so the same styling would be easier to maintain. For mobile and table, the icons are now stacked and centered, looks better. On desktop, fixed the alignment issues.

--- a/app_rapala_core/cartridge/scss/default/checkout/_shopping_cart.scss
+++ b/app_rapala_core/cartridge/scss/default/checkout/_shopping_cart.scss
@@ -1887,7 +1887,47 @@ ul.product-availability-list {
                 padding-top: 7px;
                 clear: both;
                 .trustmarksimgs {
-                    width: 300px;
+                    width:100%;
+                    @include respond (0, $large-breakpoint) {
+                        width: 300px;
+                    }
+                    .secure-payment-icons {
+                        float: right;
+                        @include respond (0, $large-breakpoint) {
+                            float:none;
+                        }
+                    }
+                    .payment-trust-imgs {
+                        float: right;
+                        height: 30px;
+                        padding: 0;
+                        width: 77px;
+                        margin-left: 10px;
+
+                        &.pci-secured-payment-icon {
+                            background: url('../images/pci_secured.png') no-repeat 0 0;
+                            background-size: cover;
+                            height: 36px;
+                            margin: 7px 0 8px 10px;
+                            width: 80px;
+                            @include respond (0, $desktop-breakpoint - 1) {
+                                display: inline-block;
+                                float: none;
+                                margin-top: 0px;
+                                top: 4px;
+                                position: relative;
+                            }
+                        }
+                        &.smcs-payment-icon {
+                            background: url('../images/smcs.jpg') no-repeat 0 0;
+                            background-size: cover;
+                            margin: 8px 0 8px 10px;
+                            @include respond (0, $desktop-breakpoint - 1) {
+                                display: inline-block;
+                                float: none;
+                           }
+                        }
+                    }
                 }
                 .paymenttrustimgs-paypal {
                     float: right;
